istio/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mon-istio-destination-rule
spec:
  host: mon-app-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mon-istio-destination-rule-v2
spec:
  host: mon-app-service-v2
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: v2
      labels:
        version: v2
